Pre-mobile scaling clean-up for .html

--- a/index.html
+++ b/index.html
@@ -2,52 +2,82 @@
 <html lang="ko">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+  <!-- Mobile viewport: do NOT add user-scalable=no, we may need zoom -->
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
   <title>Wongoji Fit Checker</title>
+
+  <!-- Styles -->
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main class="wrap">
     <h1>원고지 Fit Checker</h1>
 
+    <!-- =========================
+         INPUT / CONTROLS PANEL
+         ========================= -->
     <section class="panel">
       <label for="text">Text</label>
-      <textarea id="text" placeholder="Paste your essay here"></textarea>
+      <textarea
+        id="text"
+        placeholder="Paste your essay here"
+      ></textarea>
 
       <div class="controls">
-        <label>Width
+        <!-- Width selector -->
+        <label>
+          Width
           <select id="width">
             <option value="20">20</option>
             <option value="25">25</option>
           </select>
         </label>
 
-          <label class="limitRow">
-            <input type="checkbox" id="limitOn" />
-            Limit
-          </label>
+        <!-- Limit toggle -->
+        <label class="limitRow">
+          <input type="checkbox" id="limitOn" />
+          Limit
+        </label>
 
-            <label class="limitRow">
-              Min
-              <input type="number" id="minLimit" placeholder="e.g. 300" min="0" />
-            </label>
+        <!-- Min limit -->
+        <label class="limitRow">
+          Min
+          <input
+            type="number"
+            id="minLimit"
+            placeholder="e.g. 300"
+            min="0"
+          />
+        </label>
 
-            <label class="limitRow">
-              Max
-              <input type="number" id="maxLimit" value="400" min="1" />
-            </label>
-
+        <!-- Max limit -->
+        <label class="limitRow">
+          Max
+          <input
+            type="number"
+            id="maxLimit"
+            value="400"
+            min="1"
+          />
+        </label>
       </div>
 
+      <!-- Stats output -->
       <div id="stats" class="stats"></div>
     </section>
 
+    <!-- =========================
+         OUTPUT / GRID PANEL
+         ========================= -->
     <section class="panel output">
       <div id="grid" class="grid"></div>
     </section>
-
   </main>
 
+  <!-- App logic -->
   <script src="app.js"></script>
 </body>
 </html>
